@@ -12,18 +12,14 @@ Build.PL
 Changes
 data/config_files/function_list_central.yml
 data/config_files/function_list_central_gclp.yml
-data/config_files/function_list_central_olb.yml
 data/config_files/function_list_central_qc_run.yml
 data/config_files/function_list_post_qc_review.yml
 data/config_files/function_list_post_qc_review_gclp.yml
 data/config_files/general_values.ini
-data/config_files/illumina_pipeline.ini
 data/config_files/parallelisation.yml
-data/config_files/pb_cal_pipeline.ini
-lib/npg_pipeline/analysis/bustard4pbcb.pm
 lib/npg_pipeline/analysis/create_lane_tag_file.pm
 lib/npg_pipeline/analysis/FixConfigFiles.pm
-lib/npg_pipeline/analysis/harold_calibration_bam.pm
+lib/npg_pipeline/analysis/illumina_basecall_stats.pm
 lib/npg_pipeline/analysis/split_bam_by_tag.pm
 lib/npg_pipeline/archive/file/BamClusterCounts.pm
 lib/npg_pipeline/archive/file/generation.pm
@@ -52,7 +48,6 @@ lib/npg_pipeline/pluggable/harold/post_qc_review.pm
 lib/npg_pipeline/roles/accessor.pm
 lib/npg_pipeline/roles/business/base.pm
 lib/npg_pipeline/roles/business/flag_options.pm
-lib/npg_pipeline/roles/business/harold_calibration_reqs.pm
 lib/npg_pipeline/run/folder/link.pm
 lib/npg_tracking/daemon/analysis.pm
 lib/npg_tracking/daemon/archival.pm
@@ -82,11 +77,10 @@ t/20-archive_illumina_analysis.t
 t/20-archive_qc.t
 t/20-archive_logs.t
 t/21-references_adapters.t
-t/25-analysis-bustard4pbcb.t
 t/25-analysis-create_lane_tag_file.t
 t/25-analysis-FixConfigFiles.t
 t/25-analysis-split_bam_by_tag.t
-t/25-harold_calibration_bam.t
+t/25-analysis-illumina_basecall_stats.t
 t/30-launcher-status.t
 t/30-run_folder-link.t
 t/35-archive_file_generation-BamClusterCounts.t
