@@ -1,6 +1,6 @@
 use strict;
 use warnings;
-use Test::More tests => 91;
+use Test::More tests => 89;
 use Test::Exception;
 use File::Temp qw(tempdir tempfile);
 use File::Copy qw(cp);
@@ -51,14 +51,7 @@ use_ok(q{npg_pipeline::base});
 
 { 
   my $base = npg_pipeline::base->new();
-
-  foreach my $config_group ( qw{
-    general_values_conf
-    illumina_pipeline_conf
-    pb_cal_pipeline_conf
-  } ) {
-    isa_ok( $base->$config_group(), q{HASH}, q{$} . qq{base->$config_group} );
-  }
+  isa_ok( $base->general_values_conf(), q{HASH});
 }
 
 {
